Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25947

Project environment changes are not propagated to Run environment

XMLWordPrintable

    • All
    • 843999d578cb9bd36a4411585b87fff7f8dba9b2 (qt-creator/qt-creator/5.0)

      After making changes to the environment variables in the Project > Project Settings > Environment tab, namely changing QT_LOGGING_TO_CONSOLE to QT_FORCE_STDERR_LOGGING as suggested by Qt warning in the console, it has changed under the Build Environment section in the Build & Run > [SomeQtKit] > Build tab, but not under Environment section of the Run tab of the same Kit.

      Run Environment is set to use Build environment as its base, while Build Environment in turn uses System Environment.

      When actually running apps, they indeed use unpropagated old environment as displayed, so at least it is consistent with what it shows and how it runs. But I can't seem to force it to apply changes.

        1. 1-env.png
          1-env.png
          67 kB
        2. 2-build.png
          2-build.png
          121 kB
        3. 3-run.png
          3-run.png
          106 kB
        4. 4-console.png
          4-console.png
          33 kB
        For Gerrit Dashboard: QTCREATORBUG-25947
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            ratijas ivan tkachenko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes