ProjectExplorer: Properly handle project environment changes

... in the build configuration. We need to update the cache, so that the
changes are propagated to run configurations.

Fixes: QTCREATORBUG-25947
Change-Id: I1051df7dd03274acba1e66c3cbb9d3cb01552b4b
Reviewed-by: hjk <hjk@qt.io>